feat: add verify full profile
